# printtrace

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  test.py
src/printtrace/: __init__.py  _types.py  api.py  context.py  formatting.py  sync.py  writer.py
tests/: conftest.py  test_basic_output.py  test_context_capture.py  test_formatting.py  test_multiline.py  test_ordering.py  test_shutdown_behavior.py  test_sync.py
