[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "printtrace"
version = "1.1.0"
description = "Thread-safe, contextual debug printing for Python."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["debugging", "print", "logging", "threading", "tracing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-timeout>=2.3",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/printtrace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "timeout: mark test with timeout",
]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src/printtrace"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations
]
ignore = [
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
]

